fix(FEC-7513,FEC-7512): fix tumbEmbed to start with sound on safari 11 and unmute button z-index

--- a/modules/unMuteOverlayButton/resources/css/unMuteOverlayButton.css
+++ b/modules/unMuteOverlayButton/resources/css/unMuteOverlayButton.css
@@ -9,6 +9,7 @@
     color: white;
     border-radius: 3px;
     cursor: pointer;
+    z-index: 1;
 }
 
 .unMuteOverlayButton span {
